--- a/couic2019/index.html
+++ b/couic2019/index.html
@@ -40,10 +40,96 @@
 <!-- End Google Tag Manager (noscript) -->
 
 
-<div class="remodal" data-remodal-id="video">
+<div class="remodal modal-video" data-remodal-id="video">
     <button data-remodal-action="close" class="remodal-close"></button>
     <div class="video-container">
         <iframe id="video" src="https://www.youtube.com/embed/y7BzRfLGLiw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+</div>
+
+<div class="remodal marques" data-remodal-id="marques">
+
+    <div class="row expanded">
+        <div class="title">
+            <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/title-marques.png" alt="Les marques s'engagent" />
+        </div>
+        <div class="inner">
+            <button data-remodal-action="close">X</button>
+            <p>engagements des marques sur la castration à vif des porcelets</p>
+
+            <div class="container-label">
+                <img class="good-pig" src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/pig-happy.png" alt="" />
+            </div>
+            <div class="container-marques text-center">
+                <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/arrow.png" alt="" />
+
+                <a class="box un">
+                    <img class="decorator" src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/marques-decorator.png" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/broceliande.jpg" alt="Brocéliande" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/bordeau-chesnel.jpg" alt="Bordeau Chesnel" />
+
+                    <div class="hidden">
+                        <p class="title">Brocéliande et Bordeau Chesnel :<br />des engagements notoires</p>
+                        <p class="bold">Brocéliande :</p>
+
+                        <p>100 % de viande de femelles ou de porcs mâles non castrés.</p>
+                        <p class="bold">Bordeau Chesnel :</p>
+                        <p>L’essentiel de l’approvisionnement provient de viande de truies, de mâles entiers et, pour la gamme bio, de porcs castrés sous anesthésie locale.</p>
+                    </div>
+                </a>
+                <div class="box deux">
+                    <img class="decorator" src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/marques-decorator.png" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/herta.jpg" alt="Herta" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/madrange.jpg" alt="Madrange" />
+
+                    <div class="hidden">
+                        <p class="title">Herta dans le haut du classement</p>
+                        <p>60% de ses approvisionnements proviennent d’élevages qui ne castrent pas les animaux. <a href="https://www.herta.fr/qualite-approvisionnement" target="_blank">La marque s’engage par ailleurs</a> à ce que 100% de ses approvisionnements proviennent d’animaux non castrés à vif d’ici 2020.</p>
+                        <p class="title">Madrange : des signaux encourageants</p>
+                        <p>D’après nos estimations, environ 60% de l’approvisionnement de Madrange provient de femelles ou de mâles castrés. </p>
+                    </div>
+                </div>
+                <div class="box trois">
+                    <img class="decorator" src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/marques-decorator.png" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/henaff.jpg" alt="Hénaff" />
+                    <div class="hidden">
+                        <p class="title">Henaff : une promesse à surveiller</p>
+                        <p>Fin de la castration à vif en 2030 chez Henaff. Bien qu’ayant le mérite d’exister, cette <a href="https://www.20minutes.fr/planete/2518699-20190515-bretagne-henaff-engage-question-bien-etre-cochons" target="_blank">échéance de 2030</a> nous parait vraiment trop lointaine pour une mutilation qui pourrait être supprimée immédiatement.</p>
+
+                    </div>
+                </div>
+                <div class="box quatre">
+                    <img class="decorator" src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/marques-decorator.png" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/henri-raffin.jpg" alt="Henri Raffin" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/fleury-michon.jpg" alt="Fleury Michon" />
+                    <img class="smaller" src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/pierre_schmidt.jpg" alt="Pierre Schmidt" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/terres-breizh.jpg" alt="Terres de Breizh" />
+                    <div class="hidden">
+                        <p class="title">Fleury Michon, Raffin, Pierre Schmidt et Terre de Breizh : au-delà des déclarations d’intention, nous attendons des mesures !</p>
+                        <p>Interpellées par WELFARM au sujet de la castration des porcelets, ces entreprises nous ont répondu qu’elles prenaient ce sujet très au sérieux… sans pour autant nous présenter, à ce jour, de mesures concrètes. Une inertie clairement insatisfaisante.</p>
+                    </div>
+                </div>
+                <div class="box cinq">
+                    <img class="decorator" src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/marques-decorator.png" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/aoste.jpg" alt="Aoste" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/cochonou.jpg" alt="Cochonou" />
+                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/justin-bridou.jpg" alt="Justin Bridou" />
+                    <div class="hidden">
+                        <p class="title">Le groupe Aoste : un silence qui en dit long</p>
+
+                        <p>Les marques Aoste, Cochonou et Justin Bridou (appartenant au groupe espagnol Campofrio) n’ont publié aucun engagement et restent sourdes à nos demandes. Derrière ce silence, il y a malheureusement fort à parier que les cochons sont mutilés en grand nombre pour fournir la viande des saucissons et autres jambons secs du groupe. </p>
+                        <p><a href="https://welfarm.fr/stop-castration-barometre-marques" target="_blank">Voir l'action de WELFARM devant le groupe Aoste</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="container-label">
+                <img class="bad-pig" src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/pig-bad.png" alt="" />
+            </div>
+            <a class="signe" id="signe-marques">
+                <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/icon-pen.png" alt="">
+                Signer la pétition
+            </a>
+        </div>
     </div>
 </div>
 
@@ -82,7 +168,7 @@
                         <div class="text">
 
                             <h1><span>En France, 85% des cochons Sont</span><br />castrés sans anesthésie et<br />dans de grandes souffrances</h1>
-                            <p>Norvège, Suisse, Suède et demain l'Allemagne :  nos voisins ont décidé<br />d'interdire cette mutilation. Et en France, qu'attendons nous?</p>
+                            <p>Norvège, Suisse, Suède et demain l'Allemagne :  nos voisins ont décidé<br />d'interdire cette mutilation. Et en France, qu'attendons-nous?</p>
                             <div class="container-bt">
                                 <a href="#video">
                                     Voir la vidéo
@@ -90,6 +176,10 @@
                                 </a>
                                 <a href="" id="openPetition">
                                     Lire la pétition
+                                    <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/hover-bt-header.png" alt="">
+                                </a>
+                                <a href="#marques" id="openMarques">
+                                    Les marques s'engagent
                                     <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/hover-bt-header.png" alt="">
                                 </a>
                             </div>
@@ -189,11 +279,11 @@
                                     <p>Les cochons ne sont pas castrés.<br />
                                         À l’abattoir, un opérateur met de côté les carcasses odorantes.<br /><br />
                                         Peu nombreuses (environ 4%), elles seront alors destinées à la salaison sèche (charcuterie non cuite) ou à la confection de plats préparés (l’« odeur de verrat » ne se révélant qu’à la première cuisson de la viande).<br /><br />
-                                        Cette alternative a été choisie par l’un des leaders du secteur porcin, le groupement breton Cooperl, dont la majorité des éleveurs ne castrent plus leurs animaux depuis 2012.</p>
+                                        Cette alternative a été choisie par l’un des leaders du secteur porcin, le groupement breton Cooperl, la majorité des éleveurs ne castre plus ses animaux.</p>
                                     <p class="big green italic">Immunocastration</p>
                                     <p>Un « vaccin » qui bloque temporairement l’apparition de la puberté des porcelets est administré aux animaux.<br /><br />
 
-                                        L’une des hormones responsables du développement de l’ « odeur de verrat » est ainsi inhibée. Cette alternative est utilisée depuis plus de dix ans en France et aujourd’hui une quarantaine d’éleveurs y ont recours.<br /><br />
+                                        L’une des hormones responsables du développement de l’ « odeur de verrat » est ainsi inhibée. Cette alternative est utilisée depuis plus de dix ans en France et aujourd’hui une quarantaine d’éleveurs y a recours.<br /><br />
 
                                         <span class="italic">Welfarm milite pour le développement de l’élevage de mâles entiers et de l’immunocastration, comme alternatives durables. Dans une période transitoire, jusqu’à l’abandon de la castration à vif, le recours à l’anesthésie doit devenir la règle.</span></p>
                                 </div>
@@ -246,7 +336,7 @@
                     </section>
 
                     <section class="row engager">
-                        <p class="title">ils se sont engagés !</p>
+                        <p class="title">des députés se sont engagés !</p>
                         <p class="name">
                             <a href="http://www.assemblee-nationale.fr/dyn/15/amendements/0902/AN/2018" target="_blank">MME TAURINE</a> /
                             <a href="http://www.assemblee-nationale.fr/dyn/15/amendements/0902/AN/2018" target="_blank">MME AUTAIN</a> /
