Updated 'couic2019/index.html' via CloudCannon

--- a/couic2019/index.html
+++ b/couic2019/index.html
@@ -336,7 +336,7 @@
                     </section>
 
                     <section class="row engager">
-                        <p class="title">des députés se sont engagés !</p>
+                        <p class="title">des politiques se sont engagés !</p>
                         <p class="name">
                             <a href="http://www.assemblee-nationale.fr/dyn/15/amendements/0902/AN/2018" target="_blank">MME TAURINE</a> /
                             <a href="http://www.assemblee-nationale.fr/dyn/15/amendements/0902/AN/2018" target="_blank">MME AUTAIN</a> /
