Updated 'couic2019/index.html' via CloudCannon

--- a/couic2019/index.html
+++ b/couic2019/index.html
@@ -86,7 +86,7 @@
                         <p class="title">Herta dans le haut du classement</p>
                         <p>60% de ses approvisionnements proviennent d’élevages qui ne castrent pas les animaux. <a href="https://www.herta.fr/qualite-approvisionnement" target="_blank">La marque s’engage par ailleurs</a> à ce que 100% de ses approvisionnements proviennent d’animaux non castrés à vif d’ici 2020.</p>
                         <p class="title">Madrange : des signaux encourageants</p>
-                        <p>D’après nos estimations, environ 60% de l’approvisionnement de Madrange provient de femelles ou de mâles castrés. </p>
+                        <p>D’après nos estimations, environ 60% de l’approvisionnement de Madrange provient de femelles ou de mâles non castrés. </p>
                     </div>
                 </div>
                 <div class="box trois">
