--- a/couic2019/index.html
+++ b/couic2019/index.html
@@ -115,10 +115,10 @@
                     <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/cochonou.jpg" alt="Cochonou" />
                     <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/justin-bridou.jpg" alt="Justin Bridou" />
                     <div class="hidden">
-                        <p class="title">Le groupe Aoste : un silence qui en dit long</p>
+                        <p class="title">Le groupe Aoste : en attente d’un engagement officiel</p>
 
-                        <p>Les marques Aoste, Cochonou et Justin Bridou (appartenant au groupe espagnol Campofrio) n’ont publié aucun engagement et restent sourdes à nos demandes. Derrière ce silence, il y a malheureusement fort à parier que les cochons sont mutilés en grand nombre pour fournir la viande des saucissons et autres jambons secs du groupe. </p>
-                        <p><a href="https://welfarm.fr/stop-castration-barometre-marques" target="_blank">Voir l'action de WELFARM devant le groupe Aoste</a></p>
+                        <p>L’opacité la plus totale régnait sur la situation des cochons élevés pour le groupe Campofrio détenant les marques Aoste, Cochonou et Justin Bridou. Face à ce silence, WELFARM a déversé 54 000 fausses testicules de cochons (correspondant aux nombres d’organes sectionnés à vif par jour en France) devant les grilles de l’entreprise : une action qui l’a incité à sortir de son mutisme. Dans un communiqué de presse le groupe a alors indiqué que « l’objectif d’approvisionnement en viande issue de porcs non castrés est de 50% » en 2019 et que « l’ambition du Groupe est de poursuivre cette évolution afin d’atteindre les 100% dès que possible ». WELFARM reste en l’attente d’un engagement officiel public (et non par communiqué de presse) à 100%.</p>
+                        <p><a href="https://welfarm.fr/action-aoste" target="_blank">Voir l'action de WELFARM devant le groupe Aoste</a></p>
                     </div>
                 </div>
             </div>
@@ -388,7 +388,7 @@
                             <a class="border" href="https://action.welfarm.fr/inscription" target="_blank">JE M’INSCRIS À LA NEWSLETTER
                                 <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/arrow-right-green.png" alt="">
                             </a>
-                            <a href="https://welfarm.fr/pdf/presse/stop-castration/DP-stop-castration-WELFARM.pdf" target="_blank">JE LIS LE DOSSIER DE PRESSE
+                            <a href="https://welfarm.fr/presse" target="_blank">JE LIS LE DOSSIER DE PRESSE
                                 <img src="https://heroku-adfinitas-campaign.s3.amazonaws.com/welfarm/couic2019/arrow-right-green.png" alt="">
                             </a>
                         </div>
