Updated 'couic2019/index.html' via CloudCannon

--- a/couic2019/index.html
+++ b/couic2019/index.html
@@ -118,7 +118,7 @@
                         <p class="title">Le groupe Aoste : en attente d’un engagement officiel</p>
 
                         <p>L’opacité la plus totale régnait sur la situation des cochons élevés pour le groupe Campofrio détenant les marques Aoste, Cochonou et Justin Bridou. Face à ce silence, WELFARM a déversé 54 000 fausses testicules de cochons (correspondant aux nombres d’organes sectionnés à vif par jour en France) devant les grilles de l’entreprise : une action qui l’a incité à sortir de son mutisme. Dans un communiqué de presse le groupe a alors indiqué que « l’objectif d’approvisionnement en viande issue de porcs non castrés est de 50% » en 2019 et que « l’ambition du Groupe est de poursuivre cette évolution afin d’atteindre les 100% dès que possible ». WELFARM reste en l’attente d’un engagement officiel public (et non par communiqué de presse) à 100%.</p>
-                        <p><a href="https://welfarm.fr/action-aoste" target="_blank">Voir l'action de WELFARM devant le groupe Aoste</a></p>
+                        <p><a href="https://www.youtube.com/watch?time_continue=50&v=VhJAb-TUk74" target="_blank">Voir l'action de WELFARM devant le groupe Aoste</a></p>
                     </div>
                 </div>
             </div>
